fixed techstack spacing issues and removed box-shadow from all

--- a/style.css
+++ b/style.css
@@ -103,9 +103,6 @@ h2#changingText {
     flex: 1;
     border-radius: 25px;
     font-weight: 400;
-    box-shadow: 0px 0px 15px 1px rgba(139, 92, 246, 0.4);
-    -webkit-box-shadow: 0px 0px 15px 1px rgba(139, 92, 246, 0.4);
-    -moz-box-shadow: 0px 0px 15px 1px rgba(139, 92, 246, 0.4);
     color: #f4f4f4;
 }
 
@@ -117,22 +114,7 @@ h2#changingText {
     border-radius: 25px;
     font-weight: 400;
     letter-spacing: 1px;
-    box-shadow: 0px 0px 15px 1px rgba(139, 92, 246, 0.4);
-    -webkit-box-shadow: 0px 0px 15px 1px rgba(139, 92, 246, 0.4);
-    -moz-box-shadow: 0px 0px 15px 1px rgba(139, 92, 246, 0.4);
     color: #f4f4f4;
-}
-
-#about:hover {
-    box-shadow: 0px 0px 25px 2px rgba(139, 92, 246, 0.7);
-    -webkit-box-shadow: 0px 0px 25px 2px rgba(139, 92, 246, 0.7);
-    -moz-box-shadow: 0px 0px 25px 2px rgba(139, 92, 246, 0.7);
-}
-
-#skills:hover {
-    box-shadow: 0px 0px 25px 2px rgba(139, 92, 246, 0.7);
-    -webkit-box-shadow: 0px 0px 25px 2px rgba(139, 92, 246, 0.7);
-    -moz-box-shadow: 0px 0px 25px 2px rgba(139, 92, 246, 0.7);
 }
 
 #about h2, #skills h2{
@@ -271,7 +253,6 @@ h2#changingText {
     overflow: hidden;
     width: auto;
     padding: 0 25px;
-    margin-bottom: 5px;
     transition: max-height 0.5s ease;
 }
 
@@ -292,6 +273,12 @@ h2#changingText {
     white-space: nowrap;
     transition: all 0.2s ease;
     cursor: pointer;
+    margin-right: 0;    /* Reduced from 8px to 6px */
+    margin-bottom: 4px;   /* Reduced from 8px to 6px */
+}
+
+.tech-item:last-child {
+    margin-right: 0;
 }
 
 .tech-item:hover {
